--- a/mirror-fashion/sobre.html
+++ b/mirror-fashion/sobre.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Sobre a Mirror Fashion</title>
+
+    <link rel="stylesheet" href="css/sobre.css">
   </head>
   <body>
     <img src="img/logo.png" alt="Logo da Mirror Fashion">
@@ -25,7 +27,7 @@
     se tiver dúvidas. Conheça também nossa história e nossos diferenciais.</p>
 
     <h2>História</h2>
-    
+
     <figure>
       <img src="img/familia-pelho.jpg">
       <figcaption>Família Pelho</figcaption>
@@ -46,8 +48,8 @@
     Brasil, há 240 mil funcionários, além dos 890 mil brasileiros nas instalações de Jacarezinho e
     nos escritórios em todo país.</p>
 
-    <p>Dada a importância econômica da empresa para o Brasil, a família Pelho já recebeu diversos prêmios,
+    <div>Dada a importância econômica da empresa para o Brasil, a família Pelho já recebeu diversos prêmios,
     homenagens e condecorações. Todos os presidentes do Brasil já visitaram as instalações da Mirror
-    Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.</p>
+    Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.</div>
   </body>
 </html>
