--- a/mirror-fashion/sobre.html
+++ b/mirror-fashion/sobre.html
@@ -12,10 +12,9 @@
 
     <p>A <strong>Mirror Fashion</strong> é a maior empresa comércio eletrônico no segmento de moda em todo o mundo.</p>
 
-    <p>Fundada em 1932, possui filiais em 124 países, sendo líder de mercado com mais de 90% de
-    participação em 118 deles.</p>
+    <p>Fundada em 1932, possui filiais em 124 países, sendo líder de mercado com mais de 90% de participação em 118 deles.</p>
 
-    <p>Nosso centro de distribuição fica em Jacarezinho, no Paraná. De lá, saem 48 aviões que
+    <p>Nosso centro de distribuição fica em <a href="https://maps.google.com.br/?q=Jacarezinho" target="_blank">Jacarezinho, no Paraná</a>. De lá, saem 48 aviões que
     distribuem nossos produtos às casas do mundo todo. Nosso centro de distribuição:</p>
 
     <figure>
@@ -23,10 +22,10 @@
       <figcaption>Centro de distribuição da Mirror Fashion</figcaption>
     </figure>
 
-    <p>Compre suas roupas e acessórios na Mirror Fashion. Acesse nossa loja ou entre em contato
-    se tiver dúvidas. Conheça também nossa história e nossos diferenciais.</p>
+    <p>Compre suas roupas e acessórios na Mirror Fashion. Acesse <a href="index.html">nossa loja</a> ou entre em contato
+    se tiver dúvidas. Conheça também nossa <a href="#historia">história</a> e nossos <a href="#diferenciais">diferenciais</a>.</p>
 
-    <h2>História</h2>
+    <h2 id="historia">História</h2>
 
     <figure>
       <img src="img/familia-pelho.jpg">
@@ -52,7 +51,7 @@
     homenagens e condecorações. Todos os presidentes do Brasil já visitaram as instalações da Mirror
     Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.</div>
 
-    <h2>Diferenciais</h2>
+    <h2 id="diferenciais">Diferenciais</h2>
 
     <ul>
       <li>Menor preço do varejo, garantido</li>
@@ -64,6 +63,5 @@
       <li>Presente em 124 países</li>
       <li>Mais de um milhão de funcionários em todo o mundo</li>
     </ul>
-
   </body>
 </html>
