--- a/mirror-fashion/sobre.html
+++ b/mirror-fashion/sobre.html
@@ -17,7 +17,7 @@
     <p>Nosso centro de distribuição fica em <a href="https://maps.google.com.br/?q=Jacarezinho" target="_blank">Jacarezinho, no Paraná</a>. De lá, saem 48 aviões que
     distribuem nossos produtos às casas do mundo todo. Nosso centro de distribuição:</p>
 
-    <figure>
+    <figure id="centro-distribuicao">
       <img src="img/centro-distribuicao.png" alt="Foto do centro de distribuição da Mirror Fashion">
       <figcaption>Centro de distribuição da Mirror Fashion</figcaption>
     </figure>
@@ -27,7 +27,7 @@
 
     <h2 id="historia">História</h2>
 
-    <figure>
+    <figure id="familia-pelho">
       <img src="img/familia-pelho.jpg">
       <figcaption>Família Pelho</figcaption>
     </figure>
@@ -63,5 +63,11 @@
       <li>Presente em 124 países</li>
       <li>Mais de um milhão de funcionários em todo o mundo</li>
     </ul>
+
+    <div id="rodape">
+      <img src="img/logo.png">
+
+      &copy; Copyright Mirror Fashion
+    </div>
   </body>
 </html>
