--- a/mirror-fashion/index.html
+++ b/mirror-fashion/index.html
@@ -3,8 +3,27 @@
   <head>
     <title>Mirror Fashion</title>
     <meta charset="utf-8">
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
-     <h1>Olá, sou o index.html!</h1>
+    <header>
+      <h1><img src="img/logo.png" alt="Mirror Fashion"></h1>
+
+      <p class="sacola">
+        Nenhum item na sacola de compras
+      </p>
+
+      <nav class="menu-opcoes">
+        <ul>
+          <li><a href="#">Sua Conta</a></li>
+          <li><a href="#">Lista de Desejos</a></li>
+          <li><a href="#">Cartão Fidelidade</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="#">Ajuda</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
