--- a/mirror-fashion/index.html
+++ b/mirror-fashion/index.html
@@ -5,10 +5,11 @@
     <meta charset="utf-8">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
-    <header>
+    <header class="container">
       <h1><img src="img/logo.png" alt="Mirror Fashion"></h1>
 
       <p class="sacola">
